<resources>
    <string name="app_name">Box Office</string>
    <string name="navigation_drawer_close">close</string>
    <string name="search_title">Search movie</string>
    <string name="search_hint">Search movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release_date">Release date</string>
    <string name="runtime">Runtime</string>
    <string name="country">Country</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="budget">Budget</string>
    <string name="language">Langage</string>
    <string name="app_label">Box Office</string>
    <string name="category">Category</string>
    <string name="popular">Most popular</string>
    <string name="rated">Best rated</string>
    <string name="documentary">Documentary</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="horror">Horror</string>
    <string name="SF">Science Fiction</string>
    <string name="thriller">Thriller</string>
    <string name="no_internet">No internet connection</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="github">Github</string>
    <string name="github_link">https://github.com/Nicolas-Kermagoret/BoxOfficeCleanArchi</string>
    <string name="share_message">Just discovered a cool movie: %1$s \nCheck this out: https://www.themoviedb.org/movie/%2$s</string>
    <string name="share">Share it</string>

    <string name="category_popular">popular</string>
    <string name="category_rated">rated</string>
    <string name="category_action">genre 28</string>
    <string name="category_aventure">genre 12</string>
    <string name="category_animation">genre 16</string>
    <string name="category_comedy">genre 35</string>
    <string name="category_documentary">genre 99</string>
    <string name="category_drama">genre 18</string>
    <string name="category_family">genre 10751</string>
    <string name="category_horror">genre 27</string>
    <string name="category_sf">genre 878</string>
    <string name="category_thriller">genre 53</string>
    <string name="category_genre">genre</string>
    <string name="category_search">search</string>
    <string name="not_available">N/A</string>
    <string name="picture_path">https://image.tmdb.org/t/p/w500</string>
    <string name="minutes">min</string>


    <string name="api_key">41ee868c27200b33a3ac13ba6796bd08</string>

</resources>
